Revision history for HTML-Widget-Factory

0.082     2010-05-04
          make "disabled" a bool arg for Checkbox

0.081     2010-05-03
          when emitting <label> for radio, assume label is literal HTML
          for backcompat

0.080     2010-05-03
          switch from Class::ISA to MRO::Compat
          radio inputs now produce their content as label elements, not text
          fix "disabled" to be an attribute arg on input

0.070     2009-06-30
          add SYNOPSIS section to plugins for quick reference

0.069     2008-12-18
          radio buttons with content did not get closing tags even in XML
          work around this

0.068     2008-09-22
          chomp the output of link widgets

0.067     2008-05-06
          add ->provides_widget and ->provided_widgets methods to Factory
          fix docs for -tag arg to Attrs (thanks HDP)

0.066     2008-05-05
          add Attrs plugin for producing attribute strings (without the tags)

0.065     2008-02-29
          BUG FIX: do not fail t/plugins.t if there are extra plugins
          Happy leap day!

0.064     2008-02-26
          ENHANCEMENT: add tabindex as a global attribute

0.063     2007-11-29
          BUG FIX: previously, radio value 0 could not be selected

0.062     2007-10-08
          BUG FIX: set 'multiple' attr on multiselects

0.061     2007-10-02
          BUG FIX: do not allow 'id' attribute to trickle from widget params to
          each radio input repeatedly; now supplying id outside of options gets
          a warning

0.060     2007-09-04
          BUG FIX: the error for an invalid "value" for select now lists the
          given value, rather than 0

          no longer use base.pm

0.059     2007-09-04
          BUG FIX: fix confused attribute args for Link
          FEATURE: title is now a Link attribute arg

0.058     2007-07-19
          add ->plugins method to factory
          do not auto-load plugins under ::Plugin::Debug

0.057     2007-05-01