@@ -1,5 +1,9 @@
 Revision history for HTML-Widget-Factory
 
+{{$NEXT}}
+        - repackage to update bugtracker and repo
+        - use parent.pm
+
 0.082     2010-05-04
           make "disabled" a bool arg for Checkbox
 
